[package]
name = "advent2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.47"
itertools = "0.10.1"
nom = "7.1.0"
nom-supreme = "0.6.0"
structopt = "0.3.25"
thiserror = "1.0.30"

[build-dependencies]
joinery = "2.1.0"
lazy_format = "1.9.0"
nom = "7.1.0"
nom-supreme = "0.6.0"
